include_directories(include)

add_executable(dft_test src/test/dft_test.cpp)
add_executable(mod_test src/test/mod_test.cpp)
add_executable(mul_test src/test/mul_test.cpp)
add_executable(crt_test src/test/crt_test.cpp)
add_executable(ntt_test src/test/ntt_test.cpp)
add_executable(conv_test src/test/conv_test.cpp)
add_executable(ctxt_conv_test src/test/ctxt_conv_test.cpp)
add_executable(coeffToSlot_test src/test/coeffToSlot_test.cpp)
add_executable(matmul_test src/test/matmul_test.cpp)
add_executable(evalMod_test src/test/evalMod_test.cpp)
add_executable(bootstrap_test src/test/bootstrap_test.cpp)

add_executable(lemma1 src/experiment/lemma1.cpp)
add_executable(lemma2 src/experiment/lemma2.cpp)
add_executable(theorem1 src/experiment/theorem1.cpp)
add_executable(corollary src/experiment/corollary.cpp)

add_executable(measure_sup_norm_ratio src/experiment/measure_sup_norm_ratio.cpp)
add_executable(measure_mod_raise_size src/experiment/measure_mod_raise_size.cpp)
