include_directories(include)

find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

add_executable(dft_test src/test/dft_test.cpp)
add_executable(mod_test src/test/mod_test.cpp)
add_executable(mul_test src/test/mul_test.cpp)
add_executable(crt_test src/test/crt_test.cpp)
add_executable(ntt_test src/test/ntt_test.cpp)
add_executable(conv_test src/test/conv_test.cpp)
add_executable(ctxt_conv_test src/test/ctxt_conv_test.cpp)
add_executable(coeffToSlot_test src/test/coeffToSlot_test.cpp)
add_executable(matmul_test src/test/matmul_test.cpp)
add_executable(evalMod_test src/test/evalMod_test.cpp)
add_executable(bootstrap_test src/test/bootstrap_test.cpp)
add_executable(evalqI_test src/test/evalqI_test.cpp)

add_executable(lemma_conv_error src/experiment/section3/lemma_conv_error.cpp)
add_executable(lemma_conv_sum_error src/experiment/section3/lemma_conv_sum_error.cpp)
add_executable(theorem_single_matmul_error src/experiment/section3/theorem_single_matmul_error.cpp)
add_executable(theorem_serial_matmul_error src/experiment/section3/theorem_serial_matmul_error.cpp)
add_executable(theorem_cts_error src/experiment/section3/theorem_cts_error.cpp)
add_executable(example_sup_norm src/experiment/section4/example_sup_norm.cpp)
add_executable(measure_b_evalmod src/experiment/section4/measure_b_evalmod.cpp)
add_executable(design_delta_tilde src/experiment/section4/design_delta_tilde.cpp)
add_executable(proposal src/experiment/section4/proposal.cpp)